[package]
name = "test-psbt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.30.1", features = ["base64"] }
dotenv = "0.15.0"
bitcoincore-rpc = "0.17.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.6", features = ["blocking"] }